--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     volumes:
       - .:/usr/src/app
+    ports:
+      - "3030:3030"
     stdin_open: true
     tty: true
   mysql:
