Set up caddy reverse proxy docker container. When feathers is started it can be accessed at http://cashflow.local:2015.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,11 @@ services:
       MYSQL_DATABASE: flow
       MYSQL_USER: flow
       MYSQL_PASSWORD: flow
+  caddy:
+    build:
+      context: .docker/caddy
+      dockerfile: DockerfileCaddy
+    ports:
+      - "2015:2015"
+    volumes:
+      - .:/srv
